# bytemaker

./: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  LICENCE.md  README.md  pyproject.toml  test.py
.binder/: binder.ipynb  postBuild  requirements.txt
.github/workflows/: ci.yaml  ci.yml  dependency-review.yml  linting.yml  pypi-publish.yml  python-app.yml  testing.yml
benchmarks/: bench_bitvector.py
bytemaker/: BitArray.py  BitArray.pyi  BitArray_with_bitarray_speedup.py  aggregate_types.py  bits.py  bittypes.py  bitvector.py  bitvector_with_bitarray_speedup.py  typing_redirect.py  utils.py  ytypes.py
bytemaker/bittypes/: __init__.py  bittype.py  buffer.py  float.py  int.py  string.py
bytemaker/bitvector/: __init__.py  bitvector.py  bitvector.pyi  bitvector_native.py  bitvector_speedup.py  bitvector_with_bitarray_speedup.py
bytemaker/conversions/: aggregate_types.py  ctypes_.py  pytypes.py
bytemaker/native_types/: ctypes_.py  pytypes.py
docs/: conf.py  environment.yml  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/pages/: bits.rst  dataclass_bitfields.rst
docs/source/: conf.py
docs/source/_static/: custom.css  custom.js
docs/source/quickstart/: bitvector.rst
docs/source/quickstart/notebooks/: bittypes.ipynb
docs/source/reference/: index.rst
docs/source/reference/conversions/: conversions.rst
docs/source/reference/other_modules/: other_modules.rst
test/: aggregate_types_test.py  bits_test.py  bittypes_test.py  bitvector_differential_test.py  bitvector_implementations_test.py  bitvector_native_test.py  ctypes_test.py  future_annotations_test.py  pytypes_test.py  utils_test.py  ytypes_test.py
test/bittypes_tests/: bitarray_test.py
