[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bytemaker"
version = "0.9.2"
authors = [{name= "D. Estes McKnight", email= "contact-2@demcknight.com"}]
description = "A sub-byte-struct-supporting Python serialization/deserialization library for Python 3.8."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]

dependencies = [
    "bitarray >= 2.9.0"]

[project.optional-dependencies]
testing = [
    "pytest>=6",
    "flake8>=3.8"
]
dev = [
    "pytest>=6",
    "flake8>=3.8",
    "pre-commit >= 3.8.0"
]
docs = [
    "Sphinx>=8.0",
    "piccolo-theme>=0.2.3",
    "pydata-sphinx-theme>0.15",
    "sphinx-copybutton",
    "sphinx-design"
]


# dependencies = [
#     "typing-extensions >= 4.11; python_version < '3.11'"]

[tool.setuptools]
packages = ["bytemaker", "bytemaker.bittypes", "bytemaker.bitvector"]

[project.urls]
"Homepage" = "https://github.com/dem1995/bytemaker"
"PyPi Page" = "https://pypi.org/project/bytemaker/"

[tool.flake8]
exclude = [
    'build',
    'dist',
    '.git',
    '.github',
    '.vscode',
    '.venv',
    '__pycache__',
    '*.egg-info']

max-complexity = 8
max-line-length = 88

extend-ignore = [
    'E203', # E203: Whitespace before ':'. Flake and black disagree on this.
    'C901'] # C901: Function is too complex. We are ignoring this for now.

[tool.isort]
profile = "black"
