[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bytemaker"
version = "0.10.2"
authors = [{name= "D. Estes McKnight", email= "contact-2@demcknight.com"}]
description = "A sub-byte-struct-supporting Python serialization/deserialization library for Python 3.8."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]

dependencies = [
    "bitarray >= 2.9.0"]

[project.optional-dependencies]
testing = [
    "pytest>=6",
    "flake8>=3.8"
]
dev = [
    "pytest>=6",
    "flake8>=3.8",
    "pre-commit >= 3.8.0"
]
docs = [
    "Sphinx>=8.0",
    "piccolo-theme>=0.2.3",
    "pydata-sphinx-theme>0.15",
    "sphinx-copybutton",
    "sphinx-design"
]


# dependencies = [
#     "typing-extensions >= 4.11; python_version < '3.11'"]

[tool.setuptools]
packages = ["bytemaker", "bytemaker.bittypes", "bytemaker.bitvector", "bytemaker.conversions"]

[project.urls]
"Homepage" = "https://github.com/dem1995/bytemaker"
"PyPi Page" = "https://pypi.org/project/bytemaker/"

# flake8 config lives in .flake8 (flake8 does not read pyproject.toml natively).

[tool.isort]
profile = "black"
